--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -2,7 +2,11 @@
 
 \section{About the Author}\label{sec:about_author}
 
-My name is \textsf{Jiuning Chen}. I'm currently doing research related to image processing, computer vision, convex optimization and machine learning. 40+ hours per week can be guaranteed on this project.
+My name is \textsf{Jiuning Chen}, a third-year student in School of Mathematical Sciences, East China Normal University, Shanghai. I'm currently doing research related to image processing, computer vision, convex optimization and machine learning.\par
+
+I learned \langjulia in Aug 2018 and become a contributor of \langjulia community since Oct 2018, and plan to make more contributions in this community.\par
+
+I'm graduated this summer and will be a Ph.D candicate this fall, 40+ hours per week can be guaranteed on this project since there's no other internship or vacation plan.\par
 
 \subsection*{Programming Background}
 
@@ -11,13 +15,15 @@ I started to use \langmatlab to do research on image processing in the end of 20
 Although my programming career is less than three years, however, I think I'm qualified to achieve the project expectations for the non-trivial contributions I've done to the \langjulia{} community:
 
 \begin{itemize}
+    \item PR(merged): \pullrequest{\julialang}{julia}{29626} reviewed by \mbauman;
+    \item PR(merged): \pullrequest{\fluxml}{\flux}{372} reviewed by \mikeinnes;
+    \item PR(merged): \pullrequest{\fluxml}{\flux}{371} reviewed by \mikeinnes;
+    \item top 5 contributor of \repoflux;
     \item PR(merged): \pullrequest{\juliaimages}{\imagetransformations}{58} reviewed by \evizero and \timholy;
     \item PR(merged): \pullrequest{\juliaimages}{\imagetransformations}{59} reviewed by \evizero and \timholy;
     \item PR(merged): \pullrequest{\juliaimages}{\imagedistance}{8} reviewed by \julio;
     \item PR(merged): \pullrequest{\juliaimages}{\testimages}{35} reviewed by \timholy;
-    \item PR(merged): \pullrequest{\julialang}{julia}{29626} reviewed by \mbauman;
-    \item PR(merged): \pullrequest{\fluxml}{\flux}{372} reviewed by \mikeinnes;
-    \item PR(merged): \pullrequest{\fluxml}{\flux}{371} reviewed by \mikeinnes;
+    \item PR(rejected because of license issue): \pullrequest{\juliaimages}{\imagefiltering}{81} reviewed by \timholy;
 \end{itemize}
 to members in the lab of my supervisor:
 \begin{itemize}
@@ -25,7 +31,7 @@ to members in the lab of my supervisor:
     \item \textit{De facto} maintainer of the deep learning servers of the School of Mathematical Sciences, and that of a laboratory in Computer Sciences Department;
     \item Proudly create and maintain the homepage of my supervisor, prof. \href{http://math.ecnu.edu.cn/~fli/}{\textsf{Fang Li}};
 \end{itemize}
-and to undergraduate students in the university:
+and also to undergraduate students in the university:
 \begin{itemize}
     \item Head teaching assistant of courses of ``\href{http://math.ecnu.edu.cn/~fli/Teaching/DeepLearning/Fall2018/index.html}{Deep Learning and Action (Fall 2018)}''  and ``\href{http://math.ecnu.edu.cn/~fli/Teaching/DigitalImageProcessing/Spring2019/index.html}{Digital Image Processing (Spring 2019)}''.
     \item Unofficially mentor talented students with all the best programming practices I learned from the open-source community and from the English world\footnote{Most Chinese students are afraid of reading English since it's not their native language, however, almost all best materials are in forms of it. My role here is to learn and to preach.}.
@@ -37,7 +43,7 @@ The following is an informal self-evaluation to let you have a more structural o
     \item \textbf{Mathematics \& Image Processing (8/10)}: my current research is on image denoising based on hybrid method of variational model and deep learning;
     \item \textbf{Linux (7/10)}: heavy usage of docker, bash, git and vim in my daily work to maintain the servers;
     \item \textbf{Matlab (8/10)}: the only programming language used throughout my early-stage of research;
-    \item \textbf{Julia (6/10)}: fully understand and stick to the philosophy of \langjulia, but lack of real project experience;
+    \item \textbf{Julia (7/10)}: fully understand and stick to the philosophy of \langjulia, but lack of real project experience;
     \item \textbf{Related packages (6/10)}: familiar with other image-processing packages but haven't dig into the source code of them yet;
 \end{itemize}
 
