--- a/Proposal/symbols.tex
+++ b/Proposal/symbols.tex
@@ -74,6 +74,7 @@
 \newcommand{\repofixedpointnumbers}{\gitrepo{\juliamath}{\fixpointnumbers}}
 \newcommand{\repoimageinpainting}{\gitrepo{\juliaimages}{\imageinpainting}}
 \newcommand{\repoimageview}{\gitrepo{\juliaimages}{\imageview}}
+\newcommand{\repoflux}{\gitrepo{\fluxml}{\flux}}
 
 
 % other urls
