--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -2,6 +2,7 @@
 
 \documentclass[12pt, a4paper]{article}
 \usepackage[utf8]{inputenc}
+\usepackage[affil-it]{authblk}
 \usepackage[colorlinks=true,urlcolor=blue,citecolor=SpringGreen4,bookmarks=true]{hyperref}
 \usepackage{marvosym} % \Email
 \usepackage{cleveref}
@@ -10,22 +11,25 @@
 
 \input{symbols.tex}
 
-\title{Towards Better Images.jl Ecosystem}
-\author{Jiuning Chen\mailto{johnnychen94@hotmail.com}\\
-Github: \href{https://github.com/johnnychen94}{Johnnychen94}\\
-Mentors: \zygmunt, \julio, \timholy
-}
+\renewcommand\Authfont{\fontsize{14.4}{14.4}\selectfont}
+\renewcommand\Affilfont{\fontsize{12}{14.4}\selectfont}
+\renewcommand\abstractname{Abstract}
+
+
+\title{\huge Towards Better Images.jl Ecosystem}
+\author{Jiuning Chen\mailto{johnnychen94@hotmail.com}}
+\affil{Github: \href{https://github.com/johnnychen94}{Johnnychen94} \quad Slack: Johnny Chen\\
+Mentors: \zygmunt, \julio, \timholy}
 \date{\today}
 
 \begin{document}
 \maketitle
 
-\renewcommand\abstractname{Abstract}
 \begin{abstract}
     This project aims to achieve a better ecosystem for \href{https://juliaimages.org/latest/}{\images}, an image-processing toolbox in \href{https://julialang.org/}{\langjulia}. Main contributions consist of user-friendly documentation of \images{} ecosystem, developer manual, and more consistent, robust, and extensible APIs. This project also serves as a subproject to \images{} \version{1.0} milestone.
 \end{abstract}
 
-\noindent The author is currently a third-year graduate student and Ph.D candidate in School of Mathematical Sciences, East China Normal University, Shanghai. His current research interests are image processing and computer vision, convex optimization, and machine learning. More information about him is listed in \cref{sec:about_author}.\par
+\noindent The author is currently a third-year graduate student in School of Mathematical Sciences, East China Normal University, Shanghai. His current research interests are image processing and computer vision, convex optimization, and machine learning. His contribution to \images{} begins from \date{Aug 2018}. More information about him is listed in \cref{sec:about_author}.\par
 
 \renewcommand\contentsname{Table of Contents}
 \tableofcontents
