fix typo and grammar mistakes

--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -26,10 +26,10 @@ Mentors: \zygmunt, \julio, \timholy}
 \maketitle
 
 \begin{abstract}
-    This project aims to achieve a better ecosystem for \href{https://juliaimages.org/latest/}{\images}, an image-processing toolbox in \href{https://julialang.org/}{\langjulia}. Main contributions consist of user-friendly documentation of \images{} ecosystem, developer manual, and more consistent, robust, and extensible APIs. This project also serves as a subproject to \images{} \version{1.0} milestone.
+    This project aims to achieve a better ecosystem for \href{https://juliaimages.org/latest/}{\images}, an image-processing toolbox in \href{https://julialang.org/}{\langjulia}. Main contributions consist of user-friendly documentation of \images{} ecosystem, developer manual, and more consistent, robust, and extensible APIs. Moreover, this project also serves as a subproject to \images{} \version{1.0} milestone.
 \end{abstract}
 
-\noindent The author is currently a third-year graduate student in School of Mathematical Sciences, East China Normal University, Shanghai. His current research interests are image processing and computer vision, convex optimization, and machine learning. His contribution to \images{} begins from \date{Aug 2018}. More information about him is listed in \cref{sec:about_author}.\par
+\noindent The author, who began his contribution to \images{} since \date{Aug 2018}, is currently a third-year graduate student in the School of Mathematical Sciences, East China Normal University, Shanghai. His current research interests are image processing and computer vision, convex optimization, and machine learning. More information about him is listed in \cref{sec:about_author}.\par
 
 \renewcommand\contentsname{Table of Contents}
 \tableofcontents
