--- a/Proposal/project.tex
+++ b/Proposal/project.tex
@@ -6,18 +6,18 @@
 
 \subsection*{Project Background}
 
-However, despite of the not yet benchmarked performance, this toolbox at present is still not friendly to both users and developers. Unlike other mature julia packages such as \repojump and \repogpuarrays, \images{} requires potential users and developers to understand the very details of its mechanism and architecture, and this becomes even harder for them without comprehensive documentation on it. Under this circumstance, many image-processing researchers are still using \langpython and \langmatlab for their daily work.
+However, despite the not yet benchmarked performance, this toolbox at present is still not friendly to both users and developers. Unlike other mature \langjulia{} packages such as \repojump and \repogpuarrays, \images{} requires potential users and developers to understand the very details of its mechanism and architecture, and this becomes even harder for them without comprehensive documentation on it. Under this circumstance, many image-processing researchers are still using \langpython and \langmatlab for their daily work.
 
 Some apparent causes for its poor usability are:
 \begin{itemize}
     \item there're few demos or recipes in \images{} for new users to start with;
-    \item the API varies greatly across Images.jl submodules, and can be unintuitive to the non-experts;
+    \item APIs vary greatly across Images.jl submodules, and are unintuitive to the non-experts;
     \item there's no image-processing-specific style guide on naming and programming, except the \langjulia{} \href{https://docs.julialang.org/en/v1/manual/style-guide/}{style guide};
     \item there're too many temporary helper functions defined everywhere;
-    \item \images{} is an ecosystem but it lacks of a comprehensive illustration of its packages;
+    \item \images{} is an ecosystem but it lacks a comprehensive illustration of its packages;
     \item coverage of trait functions are not fully tested.
 \end{itemize}
-Fundamentally this is because that it is still in the progress of finding the most suitable programming style to process images using \langjulia.
+Fundamentally this is because the community is still in the progress of finding the most suitable programming style to process images using \langjulia.
 
 Fortunately the problem is well-concerned in the community. Issues such as
 \begin{itemize}
@@ -37,9 +37,9 @@ With these existing work, it's in the right time to revisit the whole \images{} 
     \item providing more comprehensive and integrated documentation on both style guide and ecosystem illustration, and drafting RFCs
     \item pruning codebase of the ecosystem according to the drafted RFCs
 \end{enumerate}
-Writing demos of \images{} is not included in this project since it belongs to a totally different project. Trait functions will be examined carefully to support high-level API design.
+Writing demos of \images{} is not included in this project since it belongs to a totally different project. Trait functions are examined carefully to support high-level API design.
 
-Basically, this is a project on documentation and code refactoring to privide more consistent, robust and extensive APIs to both users and developers, and this is also a sub-project to \images{} \sname{v1.0} milestone. Potentially involved packages are:
+This is a project on documentation and code refactoring to provide more consistent, robust and extensive APIs to both users and developers, and this is also a sub-project to \images{} \sname{v1.0} milestone. Potentially involved packages are:
 \begin{itemize}
     \item \textbf{user entrance:} \repoimages
     \item \textbf{core packages:} \repoimagecore, \repoimageaxes and \repoimagemetadata
@@ -48,18 +48,18 @@ Basically, this is a project on documentation and code refactoring to privide mo
 \end{itemize}
 Computer-vision packages (e.g., \repoimagetracking) and ploting packages (e.g., \repoimageview) are not under consideration of this project.\par
 
-While doing the documenting and code refactoring work, this project will have many side effects:
+While doing the documenting and code refactoring work, this project has many side effects:
 \begin{itemize}
-    \item partially rewritting of \href{https://juliaimages.org}{user documentation} in a more meaningful way;
+    \item partially rewriting of \href{https://juliaimages.org}{user documentation} in a more meaningful way;
     \item potential bug reports and patches to all related \langjulia repositories;
     \item introduction of a new image processing package, \sname{ImageEdge.jl}, to place legacy methods in \images
     \item introduction of a new image denoising package, \repoimagenoise, as a concept-validation experimental field.\footnote{This is the author's research field.}
 \end{itemize}
 Note that these side effects are not counted as the purpose of this project.\par
 
-Before introducing the details of delivery Schedule of this project, it's worth noting that workload and timeline of this project is hard to estimate due to two reasons:
+Before introducing the details of delivery Schedule of this project, it's worth noting that workload and timeline of this project are hard to estimate due to two reasons:
 \begin{itemize}
-    \item this project can last for arbitrary long time, and can contain arbitrary number of issues and tasks; refactoring codebase can last forever.
-    \item lots of repositories are get involved in this project; time delay to receive inputs from others is significant.
+    \item this project can last for arbitrarily long time, and can contain an arbitrary number of issues and tasks; refactoring codebase can last forever.
+    \item lots of repositories are get involved in this project; time delay in receiving inputs from others is significant.
 \end{itemize}
 Hence the purpose of this project isn't to make the ecosystem perfect, instead, it is to evolve an ecosystem that is significantly better in API and naming style with comprehensive documentation, so that future development towards \images{} \version{1.0} is possible.
