--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -2,15 +2,15 @@
 
 \section{About the Author}\label{sec:about_author}
 
-My name is \textsf{Jiuning Chen}, a third-year student in School of Mathematical Sciences, East China Normal University, Shanghai. I'm currently doing research related to image processing, computer vision, convex optimization and machine learning.\par
+My name is \textsf{Jiuning Chen}, a third-year student in the School of Mathematical Sciences, East China Normal University, Shanghai. I'm currently doing research related to image processing, computer vision, convex optimization, and machine learning.\par
 
-I learned \langjulia in Aug 2018 and become a contributor of \langjulia community since Oct 2018, and plan to make more contributions in this community.\par
+I learned \langjulia in Aug 2018 and become a contributor to \langjulia community since Oct 2018, and plan to make more contributions in this community.\par
 
-I'm graduated this summer and will be a Ph.D candicate this fall, 40+ hours per week can be guaranteed on this project since there's no other internship or vacation plan.\par
+I'm graduated this summer and will be a Ph.D. candidate this fall, 40+ hours per week can be guaranteed on this project since there's no other internship or vacation plan.\par
 
 \subsection*{Programming Background}
 
-I started to use \langmatlab to do research on image processing in the end of 2016, met  \langjulia after its \version{1.0} announcement, and learned \langpython during the Spring Festival of 2019. \par
+I started to use \langmatlab to research image processing at the end of 2016, met  \langjulia after its \version{1.0} announcement, and learned \langpython during the Spring Festival of 2019. \par
 
 Although my programming career is less than three years, however, I think I'm qualified to achieve the project expectations for the non-trivial contributions I've done to the \langjulia{} community:
 
