fourth version with layout refined

--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -4,9 +4,7 @@
 
 My name is \textsf{Jiuning Chen}, a third-year student in the School of Mathematical Sciences, East China Normal University, Shanghai. I'm currently doing research related to image processing, computer vision, convex optimization, and machine learning.\par
 
-I learned \langjulia in Aug 2018 and become a contributor to \langjulia community since Oct 2018, and plan to make more contributions in this community.\par
-
-I'm graduated this summer and will be a Ph.D. candidate this fall, 40+ hours per week can be guaranteed on this project since there's no other internship or vacation plan.\par
+I learned \langjulia in Aug 2018 and become a contributor to \langjulia community since Oct 2018, and plan to make more contributions in this community. 40+ hours per week can be guaranteed on this project since there's no other internship or vacation plan this summer.\par
 
 \subsection*{Programming Background}
 
@@ -18,27 +16,21 @@ Although my programming career is less than three years, however, I think I'm qu
     \item PR(merged): \pullrequest{\julialang}{julia}{29626} reviewed by \mbauman;
     \item PR(merged): \pullrequest{\fluxml}{\flux}{372} reviewed by \mikeinnes;
     \item PR(merged): \pullrequest{\fluxml}{\flux}{371} reviewed by \mikeinnes;
-    \item top 5 contributor of \repoflux;
     \item PR(merged): \pullrequest{\juliaimages}{\imagetransformations}{58} reviewed by \evizero and \timholy;
     \item PR(merged): \pullrequest{\juliaimages}{\imagetransformations}{59} reviewed by \evizero and \timholy;
     \item PR(merged): \pullrequest{\juliaimages}{\imagedistance}{8} reviewed by \julio;
     \item PR(merged): \pullrequest{\juliaimages}{\testimages}{35} reviewed by \timholy;
     \item PR(rejected because of license issue): \pullrequest{\juliaimages}{\imagefiltering}{81} reviewed by \timholy;
 \end{itemize}
-to members in the lab of my supervisor:
+to members in the lab of my supervisor and students in the university:
 \begin{itemize}
-    \item Independently set up the whole self-hosted research platform from scratch for my supervisor's laboratory\footnote{The platform includes but not limited to homepage, documents for users and administrators, server monitor, gitlab, jupyterhub, sharelatex, DNS servers, and VPN servers.};
+    \item Independently set up the whole self-hosted research platform from scratch for my supervisor's laboratory;
     \item \textit{De facto} maintainer of the deep learning servers of the School of Mathematical Sciences, and that of a laboratory in Computer Sciences Department;
     \item Proudly create and maintain the homepage of my supervisor, prof. \href{http://math.ecnu.edu.cn/~fli/}{\textsf{Fang Li}};
-\end{itemize}
-and also to undergraduate students in the university:
-\begin{itemize}
     \item Head teaching assistant of courses of ``\href{http://math.ecnu.edu.cn/~fli/Teaching/DeepLearning/Fall2018/index.html}{Deep Learning and Action (Fall 2018)}''  and ``\href{http://math.ecnu.edu.cn/~fli/Teaching/DigitalImageProcessing/Spring2019/index.html}{Digital Image Processing (Spring 2019)}''.
-    \item Unofficially mentor talented students with all the best programming practices I learned from the open-source community and from the English world\footnote{Most Chinese students are afraid of reading English since it's not their native language, however, almost all best materials are in forms of it. My role here is to learn and to preach.}.
 \end{itemize}
 
 The following is an informal self-evaluation to let you have a more structural overview of my skill:
-
 \begin{itemize}
     \item \textbf{Mathematics \& Image Processing (8/10)}: my current research is on image denoising based on hybrid method of variational model and deep learning;
     \item \textbf{Linux (7/10)}: heavy usage of docker, bash, git and vim in my daily work to maintain the servers;
