--- a/Proposal/project.tex
+++ b/Proposal/project.tex
@@ -62,4 +62,4 @@ Before introducing the details of delivery Schedule of this project, it's worth 
     \item this project can last for arbitrarily long time, and can contain an arbitrary number of issues and tasks; refactoring codebase can last forever.
     \item lots of repositories are get involved in this project; time delay in receiving inputs from others is significant.
 \end{itemize}
-Hence the purpose of this project isn't to make the ecosystem perfect, instead, it is to evolve an ecosystem that is significantly better in API and naming style with comprehensive documentation, so that future development towards \images{} \version{1.0} is possible.
+Hence the purpose of this project isn't to make the ecosystem perfect, instead, it is to evolve an ecosystem that is significantly better in API and naming style, so that future development towards \images{} \version{1.0} is possible.
