--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -8,9 +8,12 @@
 \usepackage{cleveref}
 \usepackage{xspace}
 \usepackage{minted}
+\usepackage{enumitem}
 
 \input{symbols.tex}
 
+\setlist{nolistsep}
+\renewcommand{\baselinestretch}{1.3}
 \renewcommand\Authfont{\fontsize{14.4}{14.4}\selectfont}
 \renewcommand\Affilfont{\fontsize{12}{14.4}\selectfont}
 \renewcommand\abstractname{Abstract}
@@ -20,7 +23,7 @@
 \author{Jiuning Chen\mailto{johnnychen94@hotmail.com}}
 \affil{Github: \href{https://github.com/johnnychen94}{Johnnychen94} \quad Slack: Johnny Chen\\
 Mentors: \zygmunt, \julio, \timholy}
-\date{\today}
+\date{}
 
 \begin{document}
 \maketitle
@@ -29,7 +32,7 @@ Mentors: \zygmunt, \julio, \timholy}
     This project aims to achieve a better ecosystem for \href{https://juliaimages.org/latest/}{\images}, an image-processing toolbox in \href{https://julialang.org/}{\langjulia}. Main contributions consist of user-friendly documentation of \images{} ecosystem, developer manual, and more consistent, robust, and extensible APIs. Moreover, this project also serves as a subproject to \images{} \version{1.0} milestone.
 \end{abstract}
 
-\noindent The author, who began his contribution to \images{} since \date{Aug 2018}, is currently a third-year graduate student in the School of Mathematical Sciences, East China Normal University, Shanghai. His current research interests are image processing and computer vision, convex optimization, and machine learning. More information about him is listed in \cref{sec:about_author}.\par
+% \noindent The author, who began his contribution to \images{} since \date{Aug 2018}, is currently a third-year graduate student in the School of Mathematical Sciences, East China Normal University, Shanghai. His current research interests are image processing and computer vision, convex optimization, and machine learning. More information about him is listed in \cref{sec:about_author}.\par
 
 \renewcommand\contentsname{Table of Contents}
 \tableofcontents
