add Cristof to mentor list

--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -22,7 +22,7 @@
 \title{\huge Towards Better Images.jl Ecosystem}
 \author{Jiuning Chen\mailto{johnnychen94@hotmail.com}}
 \affil{Github: \href{https://github.com/johnnychen94}{Johnnychen94} \quad Slack: Johnny Chen\\
-Mentors: \zygmunt, \julio, \timholy}
+Mentors: \zygmunt, \julio, \timholy, \evizero}
 \date{}
 
 \begin{document}
